--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -42,6 +42,8 @@ Layout/EndOfLine:
 Layout/MultilineMethodCallIndentation:
   Enabled: true
   EnforcedStyle: indented
+Layout/TrailingEmptyLines:
+  Enabled: false
 Lint/RaiseException:
   Enabled: false
 Lint/StructNewOverride:
